erDiagram

    budget {
        INTEGER id PK
        INTEGER quartal
        INTEGER jahr
        REAL gesamtbudget
        REAL verbrauchtes_budget
    }

    agent_log {
        INTEGER id PK
        TEXT tool_call_id
        TEXT tool_name
        TEXT tool_args
        TEXT status
        TEXT datum
        INTEGER duration_ms
    }

    lieferanten {
        INTEGER id PK
        TEXT name UK
        TEXT kontakt
        INTEGER lieferzeit_tage
        REAL bewertung
    }

    produkte {
        INTEGER id PK
        TEXT name
        INTEGER bestand
        INTEGER mindestbestand
        REAL preis_pro_einheit
        INTEGER standard_lieferant_id FK
    }

    produkt_lieferanten {
        INTEGER id PK
        INTEGER produkt_id FK
        INTEGER lieferant_id FK
        REAL preis
        INTEGER lieferzeit_tage
    }

    bestellungen {
        INTEGER id PK
        TEXT bestell_nr UK
        INTEGER produkt_id FK
        INTEGER lieferant_id FK
        INTEGER menge
        REAL gesamtkosten
        TEXT datum
    }

    verbrauch {
        INTEGER id PK
        INTEGER produkt_id FK
        INTEGER menge
        TEXT grund
        TEXT datum
    }

    chat_sessions {
        INTEGER id PK
        TEXT thread_id UK
        TEXT titel
        TEXT erstellt_am
    }

    chat_nachrichten {
        INTEGER id PK
        TEXT thread_id FK
        TEXT role
        TEXT content
        TEXT tools_used
        TEXT erstellt_am
    }

    evaluation_teilnehmende {
        TEXT teilnehmer_code PK
        TEXT einwilligung_am
        TEXT altersgruppe
        TEXT berufsbereich
        TEXT lager_erfahrung
        INTEGER digitale_kenntnisse
        TEXT ki_erfahrung
        INTEGER vorherige_kenntnis
        TEXT bevorzugter_modus
        TEXT abschluss_kommentar
        TEXT abgeschlossen_am
    }

    evaluation_durchlaeufe {
        INTEGER id PK
        TEXT teilnehmer_code FK
        INTEGER position
        TEXT modus
        TEXT szenario
        TEXT status
        TEXT gestartet_am
        TEXT abgeschlossen_am
        TEXT modell_id
        TEXT sus_antworten
        REAL sus_score
        TEXT feedback
    }

    evaluation_aufgaben {
        INTEGER id PK
        INTEGER durchlauf_id FK
        TEXT aufgabe_code
        TEXT status
        TEXT gestartet_am
        TEXT abgeschlossen_am
        INTEGER dauer_ms
        TEXT erwartung_json
        TEXT antwort_json
        INTEGER erfolgreich
        TEXT validierung_json
        INTEGER schwierigkeit
        TEXT kommentar
        TEXT chat_thread_id
    }

    evaluation_ereignisse {
        INTEGER id PK
        INTEGER aufgabe_id FK
        TEXT quelle
        TEXT ereignis_id
        TEXT aktion
        TEXT argumente_json
        TEXT status
        INTEGER dauer_ms
        TEXT erstellt_am
    }

    lieferanten ||--o{ produkte : "Standard-Lieferant"
    lieferanten ||--o{ produkt_lieferanten : "liefert"
    produkte ||--o{ produkt_lieferanten : "wird beliefert"
    produkte ||--o{ bestellungen : "wird bestellt"
    lieferanten ||--o{ bestellungen : "liefert"
    produkte ||--o{ verbrauch : "Entnahme"
    chat_sessions ||--o{ chat_nachrichten : "enthält"
    evaluation_teilnehmende ||--|{ evaluation_durchlaeufe : "absolviert"
    evaluation_durchlaeufe ||--|{ evaluation_aufgaben : "enthält"
    evaluation_aufgaben ||--o{ evaluation_ereignisse : "protokolliert"

    %% budget und agent_log sind eigenständige Tabellen ohne FK-Beziehungen
